<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_label_bmi"
        style="@style/Text.HeadStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_bmi"
        app:layout_constraintBottom_toTopOf="@id/textView_description_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_description_bmi"
        style="@style/Text.BodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_size_16dp"
        android:text="@string/description_bmi"
        app:layout_constraintBottom_toTopOf="@id/textView_label_how_to_calculate_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_label_bmi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_label_how_to_calculate_bmi"
        style="@style/Text.HeadStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_how_to_calculate_bmi"
        app:layout_constraintBottom_toTopOf="@id/textView_description_how_to_calculate_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_description_bmi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_description_how_to_calculate_bmi"
        style="@style/Text.BodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_how_to_calculate_bmi"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_label_how_to_calculate_bmi" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        style="@style/ButtonStyle"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_description_how_to_calculate_bmi" />

</androidx.constraintlayout.widget.ConstraintLayout>