<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_label_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_height" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_cm">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_label_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weight" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_kg" />

</androidx.constraintlayout.widget.ConstraintLayout>